refactro : Arrays.asList -> List.of 사용