@@ -5,7 +5,7 @@ import nextstep.ladder.domain.Players;
 import nextstep.ladder.domain.Point;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
 
@@ -14,7 +14,7 @@ public class LineTest {
     @Test
     void checkPointAndChangePosition() {
         Players players = new Players(new String[]{"A", "B", "C", "D"});
-        Line line = new Line(Arrays.asList(new Point(true), new Point(false), new Point(false)));
+        Line line = new Line(List.of(new Point(true), new Point(false), new Point(false)));
 
         line.checkPointAndChangePosition(players);
 
